--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.jjoe64:graphview:4.2.1'
 
 
 }
