--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewBodyData"></activity>
-        <activity android:name=".RecordUricAcid" />
-        <activity android:name=".RecordBloodPressure" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.EditUricAcid" />
+        <activity android:name=".activities.EditBloodPressure" />
+        <activity android:name=".activities.ViewBodyData" />
+        <activity android:name=".activities.RecordUricAcid" />
+        <activity android:name=".activities.RecordBloodPressure" />
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
