--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.jjoe64:graphview:4.2.1'
 
+    implementation 'com.squareup.okhttp3:okhttp:3.12.13'
+    implementation "com.google.android.gms:play-services-location:17.0.0"
+
+
 
 }
