--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="liang.junxuan.bodymonitoring">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity android:name=".activities.EditUricAcid" />
         <activity android:name=".activities.EditBloodPressure" />
         <activity android:name=".activities.ViewBodyData" />
@@ -21,6 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="liang.junxuan.bodymonitor.data.provider"
+            android:name=".contentProvider.BMContentProvider"
+            android:exported="false"/>
+
+        <service android:name=".services.CityLocatorService" />
+        <service android:name=".services.getLocalWeatherService"/>
     </application>
 
 </manifest>
